--- a/FlycoTabLayout_Lib/build.gradle
+++ b/FlycoTabLayout_Lib/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.library'
 version = "2.1.2"
 android {
-    compileSdkVersion 27
+    compileSdkVersion sdk_version
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 27
+        targetSdkVersion sdk_version
         versionCode 212
         versionName version
     }
@@ -19,6 +19,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:support-v4:27.+'
+    implementation "com.android.support:support-v4:$v7_version"
 }
 
