--- a/ijkplayer/build.gradle
+++ b/ijkplayer/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion sdk_version
 
 
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion sdk_version
         versionCode 1
         versionName "1.0"
 
@@ -26,7 +26,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation "com.android.support:appcompat-v7:$v7_version"
     implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.+'
     implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.+'
     implementation 'tv.danmaku.ijk.media:ijkplayer-x86:0.8.+'
