--- a/basetool/build.gradle
+++ b/basetool/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     api 'org.simple:androideventbus:1.+'
     //适配的tablayout
     implementation 'jp.wasabeef:glide-transformations:3.+'
+    api "com.android.support:cardview-v7:$v7_version"
 }
 repositories {
     mavenCentral()
