--- a/basetool/build.gradle
+++ b/basetool/build.gradle
@@ -31,6 +31,8 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     api "com.android.support:appcompat-v7:$v7_version"
+    // plugin
+    api "com.qihoo360.replugin:replugin-host-lib:$replugin_version"
     //网络请求
     api 'com.lzy.net:okgo:3.+'
     //自适应布局
