--- a/basetool/build.gradle
+++ b/basetool/build.gradle
@@ -45,8 +45,8 @@ dependencies {
     api 'org.simple:androideventbus:1.+'
     api project(':FlycoTabLayout_Lib')
     //适配的tablayout
-    implementation 'jp.wasabeef:glide-transformations:3.+'
     api "com.android.support:cardview-v7:$v7_version"
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
 }
 repositories {
     mavenCentral()
