--- a/basetool/build.gradle
+++ b/basetool/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     //自适应布局
     api 'com.zhy:autolayout:1.+'
     api "com.android.support:recyclerview-v7:$v7_version"
-    api 'com.yanzhenjie:permission:2.+'
+    api 'com.yanzhenjie:permission:2.0.0-rc4'
     api 'com.google.code.gson:gson:2.+'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     api files('libs/umeng-analytics-7.4.1.jar')
@@ -47,6 +47,7 @@ dependencies {
     //适配的tablayout
     api "com.android.support:cardview-v7:$v7_version"
     implementation 'com.github.bumptech.glide:glide:4.6.1'
+    kapt 'com.github.bumptech.glide:compiler:4.6.1'
 }
 repositories {
     mavenCentral()
