--- a/basetool/build.gradle
+++ b/basetool/build.gradle
@@ -4,10 +4,10 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion sdk_version
+    compileSdkVersion target_version
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion sdk_version
+        targetSdkVersion target_version
         versionCode 1
         versionName "1.0"
     }
@@ -30,24 +30,15 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    api "com.android.support:appcompat-v7:$v7_version"
-    //网络请求
-    api 'com.lzy.net:okgo:3.+'
+    implementation "com.android.support:appcompat-v7:$sdk_version"
     //自适应布局
     api 'com.zhy:autolayout:1.+'
-    api "com.android.support:recyclerview-v7:$v7_version"
-    api 'com.yanzhenjie:permission:2.0.0-rc4'
-    api 'com.google.code.gson:gson:2.+'
+    api "com.android.support:recyclerview-v7:$sdk_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    api files('libs/umeng-analytics-7.4.1.jar')
-    api files('libs/umeng-common-1.4.1.jar')
-    api "com.android.support:design:$v7_version"
+    api "com.android.support:design:$sdk_version"
     api 'org.simple:androideventbus:1.+'
-    api project(':FlycoTabLayout_Lib')
     //适配的tablayout
-    api "com.android.support:cardview-v7:$v7_version"
-    implementation 'com.github.bumptech.glide:glide:4.6.1'
-    kapt 'com.github.bumptech.glide:compiler:4.6.1'
+    api "com.android.support:cardview-v7:$sdk_version"
 }
 repositories {
     mavenCentral()
