--- a/basetool/src/main/AndroidManifest.xml
+++ b/basetool/src/main/AndroidManifest.xml
@@ -1,2 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.moudle.basetool"/>
+          package="com.moudle.basetool">
+    <application>
+        <activity android:name=".ui.RebackActivity"
+                  android:windowSoftInputMode="stateHidden|adjustPan"
+                  android:screenOrientation="portrait"
+        />
+    </application>
+</manifest>
