--- a/map/build.gradle
+++ b/map/build.gradle
@@ -3,11 +3,20 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 27
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
 
@@ -17,16 +26,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets{
-        main{
-            jniLibs.srcDir 'libs'
-        }
-    }
+
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    api files('libs/BaiduLBS_Android.jar')
+    implementation "com.android.support:appcompat-v7:$sdk_version"
+    api files('libs/AMap_Location_V4.0.1_20180426.jar')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 repositories {
