--- a/basetool/build.gradle
+++ b/basetool/build.gradle
@@ -33,11 +33,11 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$sdk_version"
     api 'com.yanzhenjie:permission:2.0.0-rc8'
     //自适应布局
-    api 'com.zhy:autolayout:1.+'
+    api 'com.zhy:autolayout:1.4.5'
     api "com.android.support:recyclerview-v7:$sdk_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     api "com.android.support:design:$sdk_version"
-    api 'org.simple:androideventbus:1.+'
+    api 'org.simple:androideventbus:1.0.5.1'
     //适配的tablayout
     api "com.android.support:cardview-v7:$sdk_version"
 }
