--- a/okgoutil/build.gradle
+++ b/okgoutil/build.gradle
@@ -2,11 +2,13 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion target_version
+
+
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 27
+        targetSdkVersion target_version
         versionCode 1
         versionName "1.0"
 
@@ -26,7 +28,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:$sdk_version"
-    api 'org.litepal.android:core:2.0.0'
+    api 'com.lzy.net:okgo:3.+'
+    api 'com.google.code.gson:gson:2.+'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 repositories {
