--- a/okhttpkt/build.gradle
+++ b/okhttpkt/build.gradle
@@ -6,7 +6,7 @@ android {
 
 
     defaultConfig {
-        minSdkVersion 15
+        minSdkVersion min_version
         targetSdkVersion target_version
         versionCode 1
         versionName "1.0"
@@ -29,12 +29,13 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$sdk_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-    implementation 'com.squareup.okio:okio:1.+'
+    implementation 'com.squareup.okio:okio:1.14.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.google.code.gson:gson:2.2.4'
+    api'com.google.code.gson:gson:2.8.5'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.27.0-eap13'
 }
 repositories {
     mavenCentral()
